--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h3>Пара слов о себе</h3>
         <p>Меня зовут Максим. Мне 25 лет. В один момент зашел на какой-то сайт в поисках какой-то инфы и ужаснулся его оформлением и функциональностью и в этот момент понял, чем хочу заниматься в жизни. Поэтому сейчас я изучаю направление Frontend'a.</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <p>Пока что абсолютно ничем, но потом буду делать вам ништяки.</p>
       </div>
     </section>
 
